Bug 120905 - FTL ArithMod Int32Use doesn't check for negative zero correctly
Summary: FTL ArithMod Int32Use doesn't check for negative zero correctly
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Filip Pizlo
URL:
Keywords:
Depends on:
Blocks: 112840
  Show dependency treegraph
 
Reported: 2013-09-06 15:54 PDT by Filip Pizlo
Modified: 2013-09-06 16:04 PDT (History)
7 users (show)

See Also:


Attachments
the patch (2.55 KB, patch)
2013-09-06 15:55 PDT, Filip Pizlo
mhahnenberg: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Pizlo 2013-09-06 15:54:28 PDT
Patch forthcoming.
Comment 1 Filip Pizlo 2013-09-06 15:55:13 PDT
Created attachment 210809 [details]
the patch
Comment 2 Mark Hahnenberg 2013-09-06 15:58:45 PDT
Comment on attachment 210809 [details]
the patch

r=me
Comment 3 Filip Pizlo 2013-09-06 16:04:14 PDT
Landed in http://trac.webkit.org/changeset/155222